Skip file data type for low level files
Passes to script as data_type "low_level"

--- a/blink_sass/projects.sass
+++ b/blink_sass/projects.sass
@@ -22,6 +22,11 @@
   #file-list-table
     margin-top: 10px
 
+    &.low-level-data
+
+      .low-level-hide
+        display: none
+
 .column-definitions
   margin: 25px 15px
   padding-top: 10px
