--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -102,7 +102,7 @@
                         <table class="table table-striped" id="file-list-table">
                             <tr>
                                 <th>Name</th>
-                                <th>Type</th>
+                                <th class="low-level-hide">Type</th>
                                 <th></th>
                             </tr>
                             <tr>
