--- a/static/templates/upload_file_list_item.html
+++ b/static/templates/upload_file_list_item.html
@@ -2,7 +2,7 @@
     <td>
         <span class="filename"><%- name %></span>
     </td>
-    <td>
+    <td class="low-level-hide">
         <select class="form-control">
             <option value="" disabled selected hidden>-- Select Data Type --</option>
             <option value="methylation">DNA Methylation</option>
