working on workbook detail page. finished header and tabs.

--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -36,6 +36,9 @@
   width: 36px
   height: 36px
 
+.btn-symbol
+  i.fa
+    padding-right: 0
 // hamburger button on the menu
 .lines-button
   display: inline-block
