--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -10,14 +10,14 @@
                 {% csrf_token %}
                 <div class="modal-body">
                     <label for="share-viz-users">Name (required)</label>
-                    <input class="form-control" type="text" name="name" value="{{ workbook.name }}"/>
+                    <input class="form-control" type="text" name="name" value="{{ workbook.name }}" required/>
                     <br>
                     <label for="share-viz-users">Description (optional)</label>
                     <textarea class="form-control" name="description">{{workbook.description }}</textarea>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Update" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
@@ -35,8 +35,8 @@
             <form id="delete-workbook" method="POST" action="{% url 'workbook_delete' workbook.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Delete" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
@@ -49,13 +49,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Workbook Sharing</h4>
+                <!--<h4 class="modal-title">Workbook Sharing</h4>-->
+                <ul class="nav nav-tabs" data-tabs="tablist">
+                    {% if workbook.owner == request.user %}
+                        <li class="active"><a href="#share" data-toggle="tab">Share</a></li>
+                    {% endif %}
+                    <li ><a href="#shared-with" data-toggle="tab">Shared With</a></li>
+                </ul>
             </div>
-            <ul class="nav nav-tabs" data-tabs="tablist">
-                <li class="active"><a href="#share" data-toggle="tab">Share</a></li>
-                <li ><a href="#shared-with" data-toggle="tab">Shared With</a></li>
-            </ul>
             <div class="tab-content">
+                {% if workbook.owner == request.user %}
                 <form class="tab-pane fade in active" id="share" method="POST" action="{% url 'workbook_share' workbook.id %}">
                     {% csrf_token %}
                     <div class="modal-body">
@@ -63,18 +66,35 @@
                         <textarea class="form-control" name="share_users"></textarea>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         <input type="submit" value="Send" class="btn btn-primary" />
+                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
+                {% endif %}
                 <div class="tab-pane fade" id="shared-with">
                     <div class="modal-body">
-                        {% for user in workbook.share.users %}
-                            <div>{{ user.firstname }} {{ user.lastname }}</div>
-                        {% endfor %}
+                        {% if workbook.shares|length > 0 %}
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Email</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for user in shared_with_users %}
+                                <tr>
+                                    <td>{{user.first_name}} {{user.last_name}}</td>
+                                    <td>{{user.email}}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <p class="center">This list is empty.</p>
+                        {% endif %}
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
@@ -94,8 +114,8 @@
             <form id="copy-workbook" method="POST" action="{% url 'workbook_copy' workbook.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Duplicate" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
