--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -1,12 +1,12 @@
 .page-heading
   background: $white
   margin-bottom: 20px
-  padding: 15px 0
+  padding: 0
   text-transform: capitalize
 
 .page-header
   font-size: $font-size-h3
-  margin: 0.5em 0
+  margin: 0 0 20px 0
   padding-bottom: 0
   border-bottom: none
   color: $isb-primary
