--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -64,6 +64,7 @@
                 <section id="data-upload-group">
                     <div class="form-group">
                         <label>Data Upload</label>
+                        <p>Please refer to the <a href="">system data dictionary</a> for proper naming and data type conventions.</p>
                         <div class="checkbox">
                             <label>
                                 <input class="data-radio" type="radio" name="data" checked value="high"> High level data files
@@ -96,8 +97,7 @@
                             <a href="#">View example</a></p>
                     </div>
                     <div id="data-upload-forms">
-                        <p>Please refer to the <a href="">system data dictionary</a> for proper naming and data type conventions.</p>
-                        <button type="button" class="upload-file-button btn btn-default">Select File</button>
+                        <button type="button" class="upload-file-button btn btn-default">Select File(s)</button>
                         <input type="file" class="hidden upload-file-field" multiple>
                         <table class="table table-striped" id="file-list-table">
                             <tr>
